src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>gdf_Age__c</fullName>
        <description>Intended for source data &quot;age&quot; column.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Brand__c</fullName>
        <description>intended for the source data column &quot;marque&quot;</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>htc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Client_Segment__c</fullName>
        <description>Intended for the &quot;segment client&quot; column from source data</description>
        <label>Client Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Device__c</fullName>
        <description>Intended for the source data column &quot;equipement&quot;</description>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Gender__c</fullName>
        <description>intended for the source data column &quot;gender&quot;</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Income__c</fullName>
        <defaultValue>0</defaultValue>
        <description>intended for the source data &quot;income&quot; column</description>
        <label>Income</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Relocation_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>intended for the source data column &quot;relocation score&quot;</description>
        <label>Relocation Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gdf_customer_id__c</fullName>
        <description>Use for the customer_id column in the source data. For loading data, use relation mapping: 
customer_id =&gt; Contact__r.customer_id__c</description>
        <externalId>true</externalId>
        <label>Customer_id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>